[gd_scene load_steps=3 format=3 uid="uid://cxwnal0g2p8nl"]

[ext_resource type="Script" path="res://game/menus/onlinemenu/LobbyPlayerCard.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://biq18vleavg8w" path="res://game/assets/sprites/UI/MainMenus/WIMScreen.png" id="12"]

[node name="LobbyPlayerCard" type="HBoxContainer"]
scale = Vector2(0.914246, 1.16539)
script = ExtResource("1")

[node name="Background" type="Sprite2D" parent="."]
self_modulate = Color(0.0784314, 0.423529, 0.462745, 1)
position = Vector2(214.384, 15.4455)
scale = Vector2(0.227113, 0.0278285)
texture = ExtResource("12")

[node name="Challenge" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Challenge"

[node name="Spectate" type="Button" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Spectate"

[node name="PingLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "Ping: ???ms"

[node name="StatusLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "<None>"

[node name="NameLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 3
text = "HH Player"

[connection signal="pressed" from="Challenge" to="." method="_on_challenge_pressed"]
[connection signal="pressed" from="Spectate" to="." method="_on_spectate_pressed"]
